--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #2a2f41;
+    background-color: #FEF9E2;
     display: flex;
     flex-direction: column;
     font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
@@ -8,9 +8,9 @@ body {
     padding: 0px;
     margin: 0px;
 }
-#math, #section {
+#math, #section, #arrows {
     position: relative;
-    background-color: #1d2641;
+    background-color :#FEF9E2;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -20,31 +20,36 @@ body {
     padding: 10px 10px;
     align-items: center;
     font-size: 12px;
-    color: #ababab;
+    color: rgba(122, 69, 0, 0.979);
+    transition: all ease-out;
+    box-shadow: 0px 50px 50px rgba(235, 193, 10, 0.116);
+
 }
 .math{
     position: relative;
     letter-spacing: 6px;
-    color: #808080;
+    color: rgba(122, 69, 0, 0.979);
     font-size: 30px;
 }
 #myProgress {
+    display: none;
     width: 25vw;
     border-radius: 5px;
-    background-color: grey;
+    background-color: rgb(245, 212, 240);
+    overflow: hidden;
 }
-  
 #myBar {
     border-radius: 5px;
     width: 1%;
     height: 20px;
-    background-color: #ababab;
+    background-color: #FF99EF;
+    transition: all 0.05s linear;
 }
 
 input[type="submit"] {
     display: row;
     margin: 10px;
-    background-color: #ababab;
+    background-color: #FF99EF;
     border: none;
     color: white;
     padding: 4px 24px;
@@ -58,7 +63,7 @@ input[type="submit"] {
     border-radius: 3px;
 } 
 input[type="submit"]:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(235, 193, 10, 0.25),0 17px 50px 0 rgba(235, 193, 10, 0.25);
 }
 table, td, th {
     border: 1px solid black;
@@ -74,3 +79,60 @@ caption {
     font-size: 30px;
     
 }
+.arrow{
+    font-size: 20px;
+}
+#arrows{
+    display: none;
+    align-items: left;
+    align-items: flex-start;
+}
+#arrows p {
+    color: rgba(122, 69, 0, 0.979);
+    line-height: 2px;
+}
+.bounce {
+    -webkit-animation: bounce 1s infinite;
+    animation: bounce 1s infinite;
+}
+footer {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: rgba(122, 69, 0, 0.979);
+    text-align: center;
+  }
+@-webkit-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0); }
+    40% {
+    -webkit-transform: translateY(-30px); }
+    60% {
+    -webkit-transform: translateY(-15px); } }
+@-moz-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0); }
+    40% {
+    -moz-transform: translateY(-30px); }
+    60% {
+    -moz-transform: translateY(-15px); } }
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0); }
+    40% {
+    -webkit-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -o-transform: translateY(-30px);
+    transform: translateY(-30px); }
+    60% {
+    -webkit-transform: translateY(-15px);
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -o-transform: translateY(-15px);
+    transform: translateY(-15px); } }
